# StudyOpenGLVulkanDXMetal

./: .gitignore  .gitmodules  Main.md  ReadMe.md
DirectX/DirectXSamples/ComputeShaderSort11/: ComputeShaderSort11.cpp  ComputeShaderSort11_2008.sln  ComputeShaderSort11_2008.vcproj  ComputeShaderSort11_2010.sln  ComputeShaderSort11_2010.vcxproj  ComputeShaderSort11_2010.vcxproj.filters
DirectX/Tutorial/Tutorial03_Shaders/: Resource.h  Tutorial03_Shaders.cpp  Tutorial03_Shaders.rc  Tutorial03_Shaders_2008.sln  Tutorial03_Shaders_2008.vcproj  Tutorial03_Shaders_2010.sln  Tutorial03_Shaders_2010.vcxproj  Tutorial03_Shaders_2010.vcxproj.filters  dxbc.data
Metal/Official_Demo/RenderingASceneWithDeferredLightingInCPlusPlus/: README.md
Opengl/Win/: CMakeLists.txt  ReadMe.md
Opengl/Win/cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
Opengl/Win/src/: CMakeLists.txt
Opengl/Win/src/Core/: CoreHeader.h
Opengl/Win/src/Core/Math/: HMath.cpp  HMath.h
Opengl/Win/src/Platform/: PlatWindows.cpp  PlatWindows.h
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_1.1.hello_window/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_1.2.hello_window_clear/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_2.1.hello_triangle/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_2.2.hello_triangle_indexed/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_2.3.hello_triangle_exercise1/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_2.4.hello_triangle_exercise2/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_2.5.hello_triangle_exercise3/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_3.1.shaders_uniform/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_3.2.shaders_interpolation/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_3.3.shaders_class/: 3.3.shader.vs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_3.4.shaders_exercise1/: 3.4.shader.vs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_3.5.shaders_exercise2/: 3.5.shader.vs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_3.6.shaders_exercise3/: 3.6.shader.vs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_4.1.textures/: 4.1.fs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_4.2.textures_combined/: 4.2.fs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_4.3.textures_exercise1/: 4.3.fs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_4.4.textures_exercise2/: 4.4.fs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_4.5.textures_exercise3/: 4.5.fs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_4.6.textures_exercise4/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_4.Test.integer_texture/: 4.6.fs.glsl  4.6.vs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_5.1.transformations/: 5.1.fs.glsl  5.1.vs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_5.2.transformations_exercise2/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_6.1.coordinate_systems/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_6.3.coordinate_systems_multiple/: 6.3.vs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_6.4.coordinate_systems_exercise3/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_7.2.camera_keyboard_dt/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_7.3.camera_mouse_zoom/: Main.cpp
Opengl/Win/src/Samples/Chapter1.getting_started/Chapter1_7.4.camera_class/: 7.4.fs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter2.lighting/Chapter2_1.colors/: Main.cpp
Opengl/Win/src/Samples/Chapter2.lighting/Chapter2_2.1.basic_lighting_diffuse/: Main.cpp  cube.fs.glsl  cube.vs.glsl
Opengl/Win/src/Samples/Chapter2.lighting/Chapter2_2.2.basic_lighting_specular/: Main.cpp  cube.fs.glsl  cube.vs.glsl
Opengl/Win/src/Samples/Chapter2.lighting/Chapter2_3.1.materials/: Main.cpp  cube.fs.glsl
Opengl/Win/src/Samples/Chapter2.lighting/Chapter2_4.1.lighting_maps_diffuse_map/: Main.cpp  cube.fs.glsl
Opengl/Win/src/Samples/Chapter2.lighting/Chapter2_4.2.lighting_maps_specular_map/: Main.cpp  cube.vs.glsl
Opengl/Win/src/Samples/Chapter2.lighting/Chapter2_5.1.light_casters_directional/: cube.fs.glsl
Opengl/Win/src/Samples/Chapter2.lighting/Chapter2_5.2.light_casters_point/: Main.cpp
Opengl/Win/src/Samples/Chapter2.lighting/Chapter2_5.3.light_casters_spot/: Main.cpp  cube.fs.glsl
Opengl/Win/src/Samples/Chapter2.lighting/Chapter2_5.4.light_casters_spot_soft/: Main.cpp  cube.fs.glsl
Opengl/Win/src/Samples/Chapter2.lighting/Chapter2_6.multiple_lights/: Main.cpp  cube.fs.glsl  light.fs.glsl
Opengl/Win/src/Samples/Chapter3.model_loading/Chapter3_1.model_loading/: Main.cpp  Mesh.h  Model.h  model_loading.fs.glsl
Opengl/Win/src/Samples/Chapter4.advanced_opengl/Chapter4_1.1.depth_testing/: Main.cpp  depth_testing.fs.glsl  depth_testing.vs.glsl
Opengl/Win/src/Samples/Chapter4.advanced_opengl/Chapter4_1.2.depth_testing_view/: Main.cpp
Opengl/Win/src/Samples/Chapter4.advanced_opengl/Chapter4_10.1.instancing_quads/: Main.cpp
Opengl/Win/src/Samples/Chapter4.advanced_opengl/Chapter4_2.stencil_testing/: DiffuseColor.fs.glsl  Edge.fs.glsl  Edge.vs.glsl  Main.cpp
Opengl/Win/src/Samples/Chapter4.advanced_opengl/Chapter4_3.1.blending_discard/: Main.cpp  blending.fs.glsl  blending.vs.glsl
Opengl/Win/src/Samples/Chapter4.advanced_opengl/Chapter4_3.2.blending_sort/: Main.cpp
Opengl/Win/src/Samples/Other/1.indirect_draw/: Main.cpp
Opengl/Win/src/Samples/Other/2.view_earlyz/: Main.cpp  fs.glsl  vs.glsl
Opengl/iOS/: ReadMe.md
Proj/: CMakeLists.txt
Proj/src/Framework/: Camera.cpp  Camera.h  Common.h
Vulkan/VulkanDemo/: NewProj.bat  NewProj.py  VulkanDemo.sln
(+87 files in other folders)
